# nx_bits_and_bytes

./: .gitignore  CMakeLists.txt  README.md  mix.exs
c_src/: elixirInterface.cpp
lib/: bits_and_bytes.ex
lib/bits_and_bytes/: nif.ex
test/: bits_and_bytes_test.exs
